Small correction in css for the flash masseges. With the absolute position it was covering Yii's default menu.

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -31,9 +31,6 @@
 #rights .flashes {
 	width:910px;
 	height:40px;
-	position:absolute;
-	top:60px;
-	left:20px;
 }
 #rights .flash {
 	margin:0;
